Backend y endpoints funcionales